--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ body{
   width: 100vw;
   height: 100vh;
   background-color: black;
-  font-family: monospace;
+  font-family: 'Avenir Next';
 }
 
 * {
